feat: Wrote our own multiclass_summarize function to calculate the Average Precision (AP) per class, as well as the Mean Average Precision (mAP).  We need these to compare with YOLO and other models.

--- a/notebooks/model_fastrcnn.ipynb
+++ b/notebooks/model_fastrcnn.ipynb
@@ -409,15 +409,130 @@
     "# let's train it just for 2 epochs\n",
     "num_epochs = 1\n",
     "\n",
+    "evaluators = []\n",
     "for epoch in range(num_epochs):\n",
     "    # train for one epoch, printing every 10 iterations\n",
     "    train_one_epoch(model, optimizer, data_loader, device, epoch, print_freq=10)\n",
     "    # update the learning rate\n",
     "    lr_scheduler.step()\n",
     "    # evaluate on the test dataset\n",
-    "    evaluate(model, data_loader_test, device=device)\n",
+    "    eval = evaluate(model, data_loader_test, device=device)\n",
+    "    evaluators.append(eval)\n",
     "\n",
     "torch.save(model.state_dict(), \"model_factrcnn.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating index...\n",
+      "index created!\n",
+      "Test:  [  0/250]  eta: 0:02:37  model_time: 0.6249 (0.6249)  evaluator_time: 0.0026 (0.0026)  time: 0.6281  data: 0.0005\n",
+      "Test:  [100/250]  eta: 0:01:29  model_time: 0.5936 (0.5949)  evaluator_time: 0.0005 (0.0007)  time: 0.5953  data: 0.0001\n",
+      "Test:  [200/250]  eta: 0:00:29  model_time: 0.5812 (0.5946)  evaluator_time: 0.0006 (0.0007)  time: 0.5837  data: 0.0001\n",
+      "Test:  [249/250]  eta: 0:00:00  model_time: 0.5833 (0.5935)  evaluator_time: 0.0006 (0.0007)  time: 0.5845  data: 0.0001\n",
+      "Test: Total time: 0:02:28 (0.5943 s / it)\n",
+      "Averaged stats: model_time: 0.5833 (0.5935)  evaluator_time: 0.0006 (0.0007)\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=0.04s).\n",
+      "IoU metric: bbox\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.328\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.551\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.370\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.031\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.058\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.417\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.411\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.550\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.553\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.145\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.157\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.632\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval = evaluate(model, data_loader_test, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class 0 AP : 0.47462342091759946\n",
+      "class 1 AP : 0.35715840629281875\n",
+      "class 2 AP : 0.20780115112818254\n",
+      "class 3 AP : 0.4084303018104592\n",
+      "class 4 AP : 0.19355458969180267\n",
+      "(all) mAP : 0.3283135739681725\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.328\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.32831357396817257"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiclass_summarize( ce, ap=1, iouThr=None, areaRng='all', maxDets=100 ):\n",
+    "    p = ce.params\n",
+    "    iStr = ' {:<18} {} @[ IoU={:<9} | area={:>6s} | maxDets={:>3d} ] = {:0.3f}'\n",
+    "    titleStr = 'Average Precision' if ap == 1 else 'Average Recall'\n",
+    "    typeStr = '(AP)' if ap==1 else '(AR)'\n",
+    "    iouStr = '{:0.2f}:{:0.2f}'.format(p.iouThrs[0], p.iouThrs[-1]) \\\n",
+    "        if iouThr is None else '{:0.2f}'.format(iouThr)\n",
+    "\n",
+    "    aind = [i for i, aRng in enumerate(p.areaRngLbl) if aRng == areaRng]\n",
+    "    mind = [i for i, mDet in enumerate(p.maxDets) if mDet == maxDets]\n",
+    "    if ap == 1:\n",
+    "        # dimension of precision: [TxRxKxAxM]\n",
+    "        s = ce.eval['precision']\n",
+    "        # IoU\n",
+    "        if iouThr is not None:\n",
+    "            t = np.where(iouThr == p.iouThrs)[0]\n",
+    "            s = s[t]\n",
+    "        s = s[:,:,:,aind,mind]\n",
+    "    else:\n",
+    "        # dimension of recall: [TxKxAxM]\n",
+    "        s = ce.eval['recall']\n",
+    "        if iouThr is not None:\n",
+    "            t = np.where(iouThr == p.iouThrs)[0]\n",
+    "            s = s[t]\n",
+    "        s = s[:,:,aind,mind]\n",
+    "    if len(s[s>-1])==0:\n",
+    "        mean_s = -1\n",
+    "    else:\n",
+    "        mean_s = np.mean(s[s>-1])\n",
+    "        num_classes = len(p.catIds)\n",
+    "        avg_ap = 0.0\n",
+    "        if ap == 1:\n",
+    "            for i in range(0, num_classes):\n",
+    "                print('class {0} AP : {1}'.format(i,np.mean(s[:,:,i,:])))\n",
+    "                avg_ap +=np.mean(s[:,:,i,:])\n",
+    "            print('(all) mAP : {}'.format(avg_ap / num_classes))\n",
+    "    print(iStr.format(titleStr, typeStr, iouStr, areaRng, maxDets, mean_s))\n",
+    "    return mean_s\n",
+    "\n",
+    "iou_type = \"bbox\"\n",
+    "ce = eval.coco_eval[iou_type]\n",
+    "multiclass_summarize(ce)"
    ]
   },
   {
