feat: Completed our first model comparison (see comparison.ipynb), currently only comparing ap50-95 (just 'ap' in the metrics).

--- a/notebooks/model_fastrcnn.ipynb
+++ b/notebooks/model_fastrcnn.ipynb
@@ -463,36 +463,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.5  0.55 0.6  0.65 0.7  0.75 0.8  0.85 0.9  0.95]\n",
+      "class 0 AP : 0.6691170078730871\n",
+      "class 1 AP : 0.6807712099776464\n",
+      "class 2 AP : 0.39838980144066183\n",
+      "class 3 AP : 0.7100248955312386\n",
+      "class 4 AP : 0.2971397381800174\n",
+      "(all) mAP : 0.5510885306005303\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.551\n",
+      "[0.5  0.55 0.6  0.65 0.7  0.75 0.8  0.85 0.9  0.95]\n",
       "class 0 AP : 0.47462342091759946\n",
       "class 1 AP : 0.35715840629281875\n",
       "class 2 AP : 0.20780115112818254\n",
       "class 3 AP : 0.4084303018104592\n",
       "class 4 AP : 0.19355458969180267\n",
       "(all) mAP : 0.3283135739681725\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.328\n"
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.328\n",
+      "[0.5  0.55 0.6  0.65 0.7  0.75 0.8  0.85 0.9  0.95]\n",
+      "class 0 AR : 0.70625\n",
+      "class 1 AR : 0.5478260869565217\n",
+      "class 2 AR : 0.5042016806722689\n",
+      "class 3 AR : 0.6000000000000001\n",
+      "class 4 AR : 0.4066666666666666\n",
+      "(all) mAR : 0.5529888868590915\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.553\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>ap</th>\n",
+       "      <th>ap50</th>\n",
+       "      <th>r</th>\n",
+       "      <th>p</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ambulance</td>\n",
+       "      <td>0.474623</td>\n",
+       "      <td>0.669117</td>\n",
+       "      <td>0.706250</td>\n",
+       "      <td>0.474623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bus</td>\n",
+       "      <td>0.357158</td>\n",
+       "      <td>0.680771</td>\n",
+       "      <td>0.547826</td>\n",
+       "      <td>0.357158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Car</td>\n",
+       "      <td>0.207801</td>\n",
+       "      <td>0.398390</td>\n",
+       "      <td>0.504202</td>\n",
+       "      <td>0.207801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Motorcycle</td>\n",
+       "      <td>0.408430</td>\n",
+       "      <td>0.710025</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.408430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Truck</td>\n",
+       "      <td>0.193555</td>\n",
+       "      <td>0.297140</td>\n",
+       "      <td>0.406667</td>\n",
+       "      <td>0.193555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>all</td>\n",
+       "      <td>0.328314</td>\n",
+       "      <td>0.551089</td>\n",
+       "      <td>0.552989</td>\n",
+       "      <td>0.328314</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.32831357396817257"
+       "        class        ap      ap50         r         p\n",
+       "0   Ambulance  0.474623  0.669117  0.706250  0.474623\n",
+       "1         Bus  0.357158  0.680771  0.547826  0.357158\n",
+       "2         Car  0.207801  0.398390  0.504202  0.207801\n",
+       "3  Motorcycle  0.408430  0.710025  0.600000  0.408430\n",
+       "4       Truck  0.193555  0.297140  0.406667  0.193555\n",
+       "5         all  0.328314  0.551089  0.552989  0.328314"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "def multiclass_summarize( ce, ap=1, iouThr=None, areaRng='all', maxDets=100 ):\n",
     "    p = ce.params\n",
+    "    print(p.iouThrs)\n",
     "    iStr = ' {:<18} {} @[ IoU={:<9} | area={:>6s} | maxDets={:>3d} ] = {:0.3f}'\n",
     "    titleStr = 'Average Precision' if ap == 1 else 'Average Recall'\n",
     "    typeStr = '(AP)' if ap==1 else '(AR)'\n",
@@ -516,23 +618,50 @@
     "            t = np.where(iouThr == p.iouThrs)[0]\n",
     "            s = s[t]\n",
     "        s = s[:,:,aind,mind]\n",
-    "    if len(s[s>-1])==0:\n",
-    "        mean_s = -1\n",
-    "    else:\n",
+    "    metrics = [-1]\n",
+    "    if len(s[s>-1]) != 0:\n",
     "        mean_s = np.mean(s[s>-1])\n",
     "        num_classes = len(p.catIds)\n",
-    "        avg_ap = 0.0\n",
-    "        if ap == 1:\n",
-    "            for i in range(0, num_classes):\n",
-    "                print('class {0} AP : {1}'.format(i,np.mean(s[:,:,i,:])))\n",
-    "                avg_ap +=np.mean(s[:,:,i,:])\n",
-    "            print('(all) mAP : {}'.format(avg_ap / num_classes))\n",
+    "        metrics = np.zeros((num_classes+1,))\n",
+    "        avg = 0.0\n",
+    "        label = 'AP' if ap == 1 else 'AR'\n",
+    "        for i in range(0, num_classes):\n",
+    "            mu = np.mean(s[:,:,i,:]) if ap == 1 else np.mean(s[:,i,:])\n",
+    "            print('class {0} {1} : {2}'.format(i,label,mu))\n",
+    "            metrics[i] = mu\n",
+    "            avg +=mu\n",
+    "        mu = avg / num_classes\n",
+    "        metrics[num_classes] = mu\n",
+    "        print('(all) m{0} : {1}'.format(label, mu))\n",
     "    print(iStr.format(titleStr, typeStr, iouStr, areaRng, maxDets, mean_s))\n",
-    "    return mean_s\n",
+    "    return metrics\n",
     "\n",
     "iou_type = \"bbox\"\n",
     "ce = eval.coco_eval[iou_type]\n",
-    "multiclass_summarize(ce)"
+    "ap50 = multiclass_summarize(ce, ap=1, iouThr=0.5) # Print AP for each class\n",
+    "ap = multiclass_summarize(ce) # Print AP for each class\n",
+    "ar = multiclass_summarize(ce, ap=2) # Print AR for each class\n",
+    "\n",
+    "# summarize the results\n",
+    "import pandas as pd\n",
+    "dfMetrics = pd.DataFrame({\n",
+    "    \"class\": label_array + ['all'],\n",
+    "    \"ap\": ap,\n",
+    "    \"ap50\": ap50,\n",
+    "    \"r\": ar,\n",
+    "    \"p\": ap,\n",
+    "})\n",
+    "display(dfMetrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_file_name = \"../results/model_fastrcnn_metrics.pkl\"\n",
+    "dfMetrics.to_pickle(metrics_file_name)"
    ]
   },
   {
